# RecipeManager

./: .gitignore  config.py  logs  main.py  populate_db.py  pyproject.toml
.github/instructions/: reviewSelection.instructions.md
.github/prompts/: self-explanatory-code-commenting.prompt.md
BackEnd/: data_models.py  gram15_parser.py  orm_models.py  sqlite_db_connection.py
BackEndLogic/: data_models.py  gram15_parser.py  orm_models.py  sqlite_db_connection.py
Utils/: custom_logger.py
