[project]
name = "recipemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "fastapi>=0.116.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
